# qshape

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  cluster.go  cluster_test.go  fingerprint.go  fingerprint_test.go  go.mod  go.sum  normalize.go  normalize_test.go  reshape.go  reshape_test.go
.github/workflows/: release.yml
cmd/qshape/: attribute.go  attribute_test.go  capture.go  fingerprint.go  format.go  format_test.go  main.go  normalize.go  regresql_stub.go  regresql_stub_test.go  root.go  typecast.go  typecast_test.go  version.go
crates/qshape-cli/: Cargo.toml
crates/qshape-cli/sql/: pg_proc.sql  pg_stat_statements.sql
crates/qshape-cli/src/: attribute.rs  capture.rs  loader.rs  main.rs  regresql_stub.rs  typecast.rs
crates/qshape-core/: Cargo.toml
crates/qshape-core/src/: cluster.rs  error.rs  fingerprint.rs  lib.rs  normalize.rs  reshape.rs  typecast.rs
