[workspace]
members = ["crates/qshape-core", "crates/qshape-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/boringsql/qshape"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
