[package]
name = "qshape-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "qshape"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
postgres = "0.19"
qshape-core = { path = "../qshape-core" }
serde_json.workspace = true
