[package]
name = "qshape"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AST-level canonicalization and fingerprinting of PostgreSQL queries, with pg_stat_statements capture."
homepage = "https://github.com/boringsql/qshape"

[[bin]]
name = "qshape"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
postgres = "0.19"
qshape-core = { path = "../qshape-core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
